--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -16,3 +16,33 @@
   warn: true
   arches:
     - ppc64le
+- pattern: iso-install.bios
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1779
+  warn: true
+  snooze: 2024-08-31
+  streams:
+    - branched
+- pattern: iso-offline-*
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1779
+  warn: true
+  snooze: 2024-08-31
+  streams:
+    - branched
+- pattern: miniso-install*
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1779
+  warn: true
+  snooze: 2024-08-31
+  streams:
+    - branched
+- pattern: pxe-online-*
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1779
+  warn: true
+  snooze: 2024-08-31
+  streams:
+    - branched
+- pattern: pxe-offline-*
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1779
+  warn: true
+  snooze: 2024-08-31
+  streams:
+    - branched
