denylist: rawhide: add kola-iso tests failing due to SELinux denials
These tests are all experiencing SELinux AVC denials causing
CoreOS Installer to fail in these installation configurations.
Denylist them for now until we can get the issue resolved:

https://github.com/coreos/fedora-coreos-tracker/issues/1779

--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -21,28 +21,33 @@
   warn: true
   snooze: 2024-08-31
   streams:
+    - rawhide
     - branched
 - pattern: iso-offline-*
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1779
   warn: true
   snooze: 2024-08-31
   streams:
+    - rawhide
     - branched
 - pattern: miniso-install*
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1779
   warn: true
   snooze: 2024-08-31
   streams:
+    - rawhide
     - branched
 - pattern: pxe-online-*
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1779
   warn: true
   snooze: 2024-08-31
   streams:
+    - rawhide
     - branched
 - pattern: pxe-offline-*
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1779
   warn: true
   snooze: 2024-08-31
   streams:
+    - rawhide
     - branched
