--- a/manifest-lock.overrides.yaml
+++ b/manifest-lock.overrides.yaml
@@ -14,78 +14,39 @@ packages:
     metadata:
       reason: https://bugzilla.redhat.com/show_bug.cgi?id=2297094
       type: pin
-  device-mapper:
-    evr: 1.02.197-1.fc40
-    metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1735
-      type: pin
-  device-mapper-event:
-    evr: 1.02.197-1.fc40
-    metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1735
-      type: pin
-  device-mapper-event-libs:
-    evr: 1.02.197-1.fc40
-    metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1735
-      type: pin
-  device-mapper-libs:
-    evr: 1.02.197-1.fc40
-    metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1735
-      type: pin
-  device-mapper-multipath:
-    evr: 0.9.7-7.fc40
-    metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1735
-      type: pin
-  device-mapper-multipath-libs:
-    evr: 0.9.7-7.fc40
-    metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1735
-      type: pin
-  kpartx:
-    evr: 0.9.7-7.fc40
-    metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1735
-      type: pin
-  lvm2:
-    evr: 2.03.23-1.fc40
-    metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1735
-      type: pin
-  lvm2-libs:
-    evr: 2.03.23-1.fc40
-    metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1735
-      type: pin
   systemd:
-    evr: 255.5-1.fc41
+    evr: 256.5-1.fc42
     metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1735
-      type: pin
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-ff872f0544
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1775
+      type: fast-track
   systemd-container:
-    evr: 255.5-1.fc41
+    evr: 256.5-1.fc42
     metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1735
-      type: pin
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-ff872f0544
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1775
+      type: fast-track
   systemd-libs:
-    evr: 255.5-1.fc41
+    evr: 256.5-1.fc42
     metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1735
-      type: pin
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-ff872f0544
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1775
+      type: fast-track
   systemd-pam:
-    evr: 255.5-1.fc41
+    evr: 256.5-1.fc42
     metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1735
-      type: pin
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-ff872f0544
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1775
+      type: fast-track
   systemd-resolved:
-    evr: 255.5-1.fc41
+    evr: 256.5-1.fc42
     metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1735
-      type: pin
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-ff872f0544
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1775
+      type: fast-track
   systemd-udev:
-    evr: 255.5-1.fc41
+    evr: 256.5-1.fc42
     metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1735
-      type: pin
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-ff872f0544
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1775
+      type: fast-track
