--- a/manifests/fedora-coreos.yaml
+++ b/manifests/fedora-coreos.yaml
@@ -32,6 +32,8 @@ conditional-include:
     include: wifi-firmwares.yaml
   - if: releasever >= 41
     include: composefs.yaml
+  - if: releasever >= 41
+    include: selinux-workaround.yaml
 
 ostree-layers:
   - overlay/15fcos
