--- a/manifest-lock.overrides.yaml
+++ b/manifest-lock.overrides.yaml
@@ -8,9 +8,4 @@
 # in the `metadata.reason` key, though it's acceptable to omit a `reason`
 # for FCOS-specific packages (ignition, afterburn, etc.).
 
-packages:
-  json-glib:
-    evr: 1.8.0-1.fc40
-    metadata:
-      reason: https://bugzilla.redhat.com/show_bug.cgi?id=2297094
-      type: pin
+packages: {}
