manifests: add pciutils
pciutils provides a set of utilities for inspecting and
setting devices connected to the PCI bus.
The utilities work from a privileged container but as they
are tiny (~350 ko once uncompressed) the decision was made
to include them in base system.

Fixes https://github.com/coreos/fedora-coreos-tracker/issues/1778

--- a/manifest-lock.aarch64.json
+++ b/manifest-lock.aarch64.json
@@ -876,6 +876,12 @@
         "sourcerpm": "hostname"
       }
     },
+    "hwdata": {
+      "evra": "0.386-1.fc40.noarch",
+      "metadata": {
+        "sourcerpm": "hwdata"
+      }
+    },
     "ignition": {
       "evra": "2.19.0-1.fc40.aarch64",
       "metadata": {
@@ -2026,6 +2032,18 @@
       "evra": "0^20240821.g1d6142f-1.fc40.noarch",
       "metadata": {
         "sourcerpm": "passt"
+      }
+    },
+    "pciutils": {
+      "evra": "3.13.0-1.fc40.aarch64",
+      "metadata": {
+        "sourcerpm": "pciutils"
+      }
+    },
+    "pciutils-libs": {
+      "evra": "3.13.0-1.fc40.aarch64",
+      "metadata": {
+        "sourcerpm": "pciutils"
       }
     },
     "pcre2": {
