--- a/manifest-lock.ppc64le.json
+++ b/manifest-lock.ppc64le.json
@@ -852,6 +852,12 @@
         "sourcerpm": "hostname"
       }
     },
+    "hwdata": {
+      "evra": "0.386-1.fc40.noarch",
+      "metadata": {
+        "sourcerpm": "hwdata"
+      }
+    },
     "ignition": {
       "evra": "2.19.0-1.fc40.ppc64le",
       "metadata": {
@@ -2002,6 +2008,18 @@
       "evra": "0^20240821.g1d6142f-1.fc40.noarch",
       "metadata": {
         "sourcerpm": "passt"
+      }
+    },
+    "pciutils": {
+      "evra": "3.13.0-1.fc40.ppc64le",
+      "metadata": {
+        "sourcerpm": "pciutils"
+      }
+    },
+    "pciutils-libs": {
+      "evra": "3.13.0-1.fc40.ppc64le",
+      "metadata": {
+        "sourcerpm": "pciutils"
       }
     },
     "pcre2": {
