--- a/manifest-lock.s390x.json
+++ b/manifest-lock.s390x.json
@@ -798,6 +798,12 @@
         "sourcerpm": "hostname"
       }
     },
+    "hwdata": {
+      "evra": "0.386-1.fc40.noarch",
+      "metadata": {
+        "sourcerpm": "hwdata"
+      }
+    },
     "ignition": {
       "evra": "2.19.0-1.fc40.s390x",
       "metadata": {
@@ -1906,6 +1912,18 @@
       "evra": "0^20240821.g1d6142f-1.fc40.noarch",
       "metadata": {
         "sourcerpm": "passt"
+      }
+    },
+    "pciutils": {
+      "evra": "3.13.0-1.fc40.s390x",
+      "metadata": {
+        "sourcerpm": "pciutils"
+      }
+    },
+    "pciutils-libs": {
+      "evra": "3.13.0-1.fc40.s390x",
+      "metadata": {
+        "sourcerpm": "pciutils"
       }
     },
     "pcre2": {
