--- a/manifest-lock.x86_64.json
+++ b/manifest-lock.x86_64.json
@@ -894,6 +894,12 @@
         "sourcerpm": "hostname"
       }
     },
+    "hwdata": {
+      "evra": "0.386-1.fc40.noarch",
+      "metadata": {
+        "sourcerpm": "hwdata"
+      }
+    },
     "ignition": {
       "evra": "2.19.0-1.fc40.x86_64",
       "metadata": {
@@ -2050,6 +2056,18 @@
       "evra": "0^20240821.g1d6142f-1.fc40.noarch",
       "metadata": {
         "sourcerpm": "passt"
+      }
+    },
+    "pciutils": {
+      "evra": "3.13.0-1.fc40.x86_64",
+      "metadata": {
+        "sourcerpm": "pciutils"
+      }
+    },
+    "pciutils-libs": {
+      "evra": "3.13.0-1.fc40.x86_64",
+      "metadata": {
+        "sourcerpm": "pciutils"
       }
     },
     "pcre2": {
