--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -25,3 +25,9 @@
     - branched
     - next-devel
     - next
+- pattern: ext.config.extensions.package
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1795
+  snooze: 2024-09-26
+  streams:
+    - next-devel
+    - next
