manifests: conditionalize duplicate manifests
All these manifests are already part of tier-x, so conditionalize them
on <f42.

--- a/manifests/fedora-coreos-base.yaml
+++ b/manifests/fedora-coreos-base.yaml
@@ -10,8 +10,6 @@ include:
   - networking-tools.yaml
   - user-experience.yaml
   - shared-workarounds.yaml
-  # See https://github.com/coreos/bootupd
-  - bootupd.yaml
   - shared-el9.yaml
   - shared-el10.yaml
 
@@ -19,6 +17,11 @@ conditional-include:
   # starting from f42, we inherit from tier-x
   - if: releasever >= 42
     include: tier-x.yaml
+  # this is inherited from tier-x in f42+, but we carry it here to
+  # enforce that there's really no coupling until f42
+  - if: releasever < 42
+    # See https://github.com/coreos/bootupd
+    include: bootupd.yaml
 
 ostree-layers:
   - overlay/05core
