--- a/manifests/fedora-coreos-base.yaml
+++ b/manifests/fedora-coreos-base.yaml
@@ -17,11 +17,13 @@ conditional-include:
   # starting from f42, we inherit from tier-x
   - if: releasever >= 42
     include: tier-x.yaml
-  # this is inherited from tier-x in f42+, but we carry it here to
+  # all these are inherited from tier-x in f42+, but we carry them here to
   # enforce that there's really no coupling until f42
   - if: releasever < 42
-    # See https://github.com/coreos/bootupd
-    include: bootupd.yaml
+    include:
+      - system-configuration-tier-x-dupes.yaml
+      # See https://github.com/coreos/bootupd
+      - bootupd.yaml
 
 ostree-layers:
   - overlay/05core
