manifests: split networking-tools.yaml
Split all the things redundant with tier-x into a separate manifest that
only gets inherited on <f42.

--- a/manifests/fedora-coreos-base.yaml
+++ b/manifests/fedora-coreos-base.yaml
@@ -22,6 +22,7 @@ conditional-include:
   - if: releasever < 42
     include:
       - system-configuration-tier-x-dupes.yaml
+      - networking-tools-tier-x-dupes.yaml
       # See https://github.com/coreos/bootupd
       - bootupd.yaml
 
