manifests: split user-experience.yaml
Split all the things redundant with tier-x into a separate manifest that
only gets inherited on <f42.

--- a/manifests/fedora-coreos-base.yaml
+++ b/manifests/fedora-coreos-base.yaml
@@ -23,6 +23,7 @@ conditional-include:
     include:
       - system-configuration-tier-x-dupes.yaml
       - networking-tools-tier-x-dupes.yaml
+      - user-experience-tier-x-dupes.yaml
       # See https://github.com/coreos/bootupd
       - bootupd.yaml
 
