manifests: hoist up bootable-rpm-ostree.yaml include
No functional change. Prep for future patch.

--- a/manifests/fedora-coreos-base.yaml
+++ b/manifests/fedora-coreos-base.yaml
@@ -6,6 +6,7 @@ include:
   - kernel.yaml
   - system-configuration.yaml
   - ignition-and-ostree.yaml
+  - bootable-rpm-ostree.yaml
   - file-transfer.yaml
   - networking-tools.yaml
   - user-experience.yaml
