manifests: split ignition-and-ostree.yaml
Split all the things redundant with tier-x into a separate manifest that
only gets inherited on <f42.

--- a/manifests/fedora-coreos-base.yaml
+++ b/manifests/fedora-coreos-base.yaml
@@ -22,6 +22,7 @@ conditional-include:
   - if: releasever < 42
     include:
       - bootable-rpm-ostree.yaml
+      - ignition-and-ostree-tier-x-dupes.yaml
       - system-configuration-tier-x-dupes.yaml
       - networking-tools-tier-x-dupes.yaml
       - user-experience-tier-x-dupes.yaml
