denylist: add ksump.crash.ssh
Recent kdump update regressed on this case.

The issue is tracked upstream: https://github.com/rhkdump/kdump-utils/issues/46
Tracking issue : https://github.com/coreos/fedora-coreos-tracker/issues/1813

--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -10,3 +10,10 @@
   warn: true
   arches:
     - ppc64le
+- pattern: kdump.crash.ssh
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1813
+  streams:
+    - rawhide
+    - branched
+    - next-devel
+    - next
